iac/docker/helm/nginx/ngnix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: ngnix
  name: ngnix
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ngnix
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/external: "true"
        io.kompose.service: ngnix
        app: ngnix
    spec:
      containers:
        - image: nginx:alpine-perl
          name: ngnix
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
