iac/docker/helm/nginx/ngnix-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: ngnix
  name: ngnix
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
  selector:
    io.kompose.service: ngnix
status:
  loadBalancer: {}
