iac/docker/helm/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngnix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: drupal-local.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ngnix
                port:
                  number: 8080
